<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_333333"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/linearlayout_divider"
        android:orientation="horizontal">

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/color_333333"/>

        <TextView
            android:id="@+id/keyboard_1"
            style="@style/keyboard_style"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="@string/tag_1"
            android:text="@string/pwd_no_1"/>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/color_333333"/>

        <TextView
            android:id="@+id/keyboard_2"
            style="@style/keyboard_style"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="@string/tag_2"
            android:text="@string/pwd_no_2"/>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/color_333333"/>

        <TextView
            android:id="@+id/keyboard_3"
            style="@style/keyboard_style"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="@string/tag_3"
            android:text="@string/pwd_no_3"/>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/color_333333"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_333333"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/color_333333"/>

        <TextView
            android:id="@+id/keyboard_4"
            style="@style/keyboard_style"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="@string/tag_4"
            android:text="@string/pwd_no_4"/>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/color_333333"/>

        <TextView
            android:id="@+id/keyboard_5"
            style="@style/keyboard_style"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="@string/tag_5"
            android:text="@string/pwd_no_5"/>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/color_333333"/>

        <TextView
            android:id="@+id/keyboard_6"
            style="@style/keyboard_style"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="@string/tag_6"
            android:text="@string/pwd_no_6"/>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/color_333333"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_333333"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/color_333333"/>

        <TextView
            android:id="@+id/keyboard_7"
            style="@style/keyboard_style"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="@string/tag_7"
            android:text="@string/pwd_no_7"/>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/color_333333"/>

        <TextView
            android:id="@+id/keyboard_8"
            style="@style/keyboard_style"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="@string/tag_8"
            android:text="@string/pwd_no_8"/>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/color_333333"/>

        <TextView
            android:id="@+id/keyboard_9"
            style="@style/keyboard_style"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="@string/tag_9"
            android:text="@string/pwd_no_9"/>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/color_333333"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_333333"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/color_333333"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#33333333"/>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/color_333333"/>

        <TextView
            android:id="@+id/keyboard_0"
            style="@style/keyboard_style"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="@string/tag_0"
            android:text="@string/pwd_no_0"/>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/color_333333"/>

        <ImageView
            android:id="@+id/keyboard_delete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/img_delete"
            android:tag="@string/tag_delete"/>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/color_333333"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_333333"/>

</LinearLayout>